kubernetes/apps/secrets/onepassword/connect/cnp.yaml
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: "onepassword-connect"
spec:
  endpointSelector:
    matchLabels:
      app: onepassword-connect
  egress:
    - toFQDNs:
        - matchPattern: "*.1password.com"
        - matchPattern: "*.1passwordusercontent.com"
  ingress:
    - fromEndpoints:
        - matchLabels:
            app.kubernetes.io/instance: external-secrets
            app.kubernetes.io/name: external-secrets
      toPorts:
        - ports:
            - port: "8080"
              protocol: TCP
    - fromEndpoints:
        - matchLabels:
            app.kubernetes.io/component: monitoring
            app.kubernetes.io/instance: vm
            app.kubernetes.io/name: vmagent
            k8s:io.kubernetes.pod.namespace: observability
      toPorts:
        - ports:
            - port: "8080"
              protocol: TCP
          rules:
            http:
              - method: "GET"
                path: "/metrics"
